static/css/room.css
.bg {
    background: #222;
    color: #fff;
}

.bg a:not(.brand):not(.button) {
    color: #caa9d1;
}

.nsfw-message {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    font-size: 1.1em;
    font-weight: bold;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    background: rgba(34,34,34,0.8);
}

.player-block {
    display: flex;
    position: relative;
    padding-right: 20rem;
    justify-content: center;
}

.player-block .button.icon {
    color: inherit;
    font-size: 1.66em;
    text-decoration: none;
}

.player-block .button.icon:active {
    color: #666;
}

.player.has-video {
    overflow: hidden;
    position: relative;
    background: #000;
}

.player {
    flex: 1;
    min-height: 3.33em;
    max-height: calc(100vh - 4rem);
    position: relative;
}

@media (min-width: 92em) and (min-height: 52.56em) {
    nav, section, footer { max-width: 96rem; }
}

@media (min-width: 106em) and (min-height: 60.44em) {
    nav, section, footer { max-width: 112rem; }
}

.player.has-video:after {
    content: '';
    display: block;
    padding-top: 56.25%;  /* 16:9 */
}

.player svg,
.player video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.player-block.theatre {
    position: fixed;
    top: 0;
    left: 0;
    padding: 0;
    width: 100%;
    max-width: none;
    z-index: 256;
}

.player.is-fullscreen,
.player-block.theatre .player {
    width: 100%;
    height: 100vh;
    max-width: none;
    min-height: none;
    max-height: none;
}

.player .controls {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0 0.5rem;
    align-items: center;
    white-space: nowrap;
    transition: transform 0.3s ease-in-out;
}

.player.has-video[data-status="playing"] .controls,
.player.has-video[data-status="paused"] .controls {
    background: rgba(34,34,34,0.8);
}

.player.has-video[data-status="playing"].hide-controls {
    cursor: none;
}

.player.has-video[data-status="playing"].hide-controls .controls:not(:hover) {
    transform: translateY(100%);
}

.player .status {
    flex: 1;
    overflow: hidden;
    line-height: 1;
    font-size: 1.1em;
    font-weight: bold;
    text-overflow: ellipsis;
    text-transform: uppercase;
}

.player .seek {
    position: absolute;
    top: -1em;
    left: 0;
    right: 0;
    color: #f7d358;
    padding-bottom: 0;
}

.player .volume {
    width: 7em;
    margin: 0 1em;
}

.stream-header .edit.icon {
    float: left;
    font-size: 1.2em;
    padding-left: 0;
}

.stream-header > form + .edit,
.stream-header > form + .edit + .name {
    display: none;
}

.stream-header > form,
.stream-header > form > * {
    margin: 0;
    height: 2.4em;  /* = 1.5 * 1.6em = h1's height */
    vertical-align: middle;
}

.stream-header > form > input[type="text"] {
    width: 50%;
    max-width: calc(100% - 4.3em);
}

.stream-header > form > input[type="checkbox"] {
    margin-left: 1em;
}

.stream-meta {
    padding: 0 2rem;
}

.stream-meta form {
    padding: 1rem 0;
    text-align: right;
    box-sizing: border-box;
    background: inherit;
}

.stream-meta form textarea {
    width: 100%;
    margin-bottom: 0.5em;
}

.stream-meta form ~ * {
    display: none !important;
}

.chat {
    position: absolute;
    width: 20rem;
    height: 100%;
    display: flex;
    flex: 0 0 auto;
    flex-direction: column;
    overflow: hidden;
}

.chat h1 {
    margin: 0 0.8em;
    padding: 1em;
    font-size: 1.2em;
    font-weight: bold;
    text-align: center;
    border-bottom: 1px solid rgba(127,127,127,0.33);
}

.chat .log {
    flex: 1 1 0;
    margin: 0;
    padding: 1em;
    display: flex;
    list-style: none;
    word-wrap: break-word;
    flex-direction: column;
}

.chat .log:before {
    content: '';
    margin-top: auto;
}

.chat .offline-message {
    color: #666;
    padding: 0.91em 1em;
    font-style: italic;
}

.chat .name {
    font-weight: bold;
    margin-right: 0.33em;
}

.chat .name[title=""]:before {
    font: normal 1em/1 FontAwesome;
    content: '\f21b';  /* user-secret */
    margin-right: 0.33em;
}

.chat form {
    position: relative;
    text-align: right;
    padding: 0 1em;
}

.chat form .error {
    margin: 1em 0 0 0;
}

.chat textarea {
    width: 100%;
}

body:not(.aside-chat) .chat form .error {
    color: #f55;
}

[data-unconfirmed] [data-status]:before,
[data-unconfirmed][data-status]:before,
.player[data-status="playing"] svg,
.player[data-status="paused"] svg,
.player[data-status="playing"] .play,
.player[data-status="loading"] .play,
.player[data-status="paused"] .stop,
.player[data-live] .seek,
.player[data-live] .reload,
.player:not([data-src=""]) .reload,
.player[data-src=""]:not([data-live]) .play,
.player[data-src=""]:not([data-live]) .stop,
.player:not([data-status="playing"]):not([data-status="loading"]) .stop,
.player:not([data-status="playing"]):not([data-status="paused"]) .seek,
.player:not([data-status="playing"]):not([data-status="paused"]) video,
.player:not(.has-audio) .mute,
.player:not(.has-audio) .volume,
.player:not(.has-video) svg,
.player:not(.has-video) video,
.player:not(.has-video) .theatre,
.player:not(.has-video) .collapse,
.player:not(.has-video) .fullscreen,
.player:not(.muted) .unmute,
.player.muted .mute,
.player.is-fullscreen .theatre,
.player.is-fullscreen .fullscreen,
.player-block.theatre .player .theatre,
.player-block:not(.theatre) .player:not(.is-fullscreen) .collapse,
.no-fullscreen .player .fullscreen,
.chat.online .offline-message,
.chat.logged-in .login-form,
.chat:not(.online) form,
.chat:not(.logged-in) .input-form {
    display: none !important;
}

@media (min-width: 30em) {
    .player:not(.has-video) .controls {
        padding: 0 2rem;
    }
}

@media (max-width: 30em) {
    .stream-meta {
        padding: 0 1rem;
    }
}

@media (min-width: 50em) {
    body.aside-chat .player-block {
        padding-right: 0;
    }

    body:not(.aside-chat) .player.has-video {
        min-height: 20rem;
    }

    body.aside-chat .chat {
        top: 100%;
        height: calc(100vh - 7.33em);
        max-height: 45rem;
        margin-left: -20rem;
        color: #222;
    }

    body.aside-chat .stream-header,
    body.aside-chat .stream-meta,
    body.aside-chat footer {
        padding-right: 22rem;
    }
}

@media (max-width: 50em) {
    .player-block {
        padding-right: 0;
    }

    .chat {
        position: fixed;
        top: 0;
        left: 100%;
        bottom: 0;
        z-index: 128;
        background: #0a0a0a;
        transition: transform 0.4s ease-in-out;
    }

    .chat-tab {
        position: fixed;
        right: 0;
        bottom: 0;
        z-index: 127;
        border-top: 2em solid transparent;
        border-right: 2em solid #000;
    }

    .chat:hover, .chat-tab:hover + .chat {
        transform: translateX(-100%);
    }

    .player .theatre {
        display: none !important;
    }

    .player-block.theatre .player .controls {
        padding-right: 2em;  /* avoid overlap with .chat-tab */
    }
}

@media (max-width: 70em) {
    .player .theatre {
        display: none !important;  /* already at 100% width anyway */
    }
}

